--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -9,5 +9,6 @@
 @using lunchBlazor.Client
 @using lunchBlazor.Client.Shared
 @using lunchBlazor.Client.Shared.Components
+@using lunchBlazor.Client.Shared.Widget
 @using lunchBlazor.Shared.Models
 @using lunchBlazor.Client.Services.BannerService
