--- a/Client/wwwroot/assets/css/app.css
+++ b/Client/wwwroot/assets/css/app.css
@@ -38,7 +38,8 @@ body[data-layout-mode="dark"] {
     background-color: #f8f9fa; }
 
 .navbar-brand-box {
-  padding: 0 1.5rem;
+  transition: width 0.3s ease-in-out;
+  padding: 5px 1rem;
   width: 250px;
   background: #fbfaff;
   border-left: 1px solid #e9e9ef;
@@ -123,8 +124,7 @@ body[data-layout-mode="dark"] .layout-mode-light {
 .header-profile-user {
   height: 36px;
   width: 36px;
-  background-color: #74788d;
-  padding: 3px; }
+}
 
 .noti-icon i {
   font-size: 22px;
@@ -346,13 +346,13 @@ body[data-layout-mode="dark"][data-topbar="light"] .notification-item .d-flex:ho
     .footer {
       left: 0; } }
 
-body[data-sidebar-size="sm"] .footer {
+div[data-sidebar-size="sm"] .footer {
   left: 70px; }
   @media (max-width: 991.98px) {
-    body[data-sidebar-size="sm"] .footer {
+    div[data-sidebar-size="sm"] .footer {
       left: 0; } }
 
-body[data-layout="horizontal"] .footer {
+div[data-layout="horizontal"] .footer {
   left: 0 !important; }
 
 body[data-layout-mode="dark"] .footer {
