--- a/Client/Shared/Components/Header.razor
+++ b/Client/Shared/Components/Header.razor
@@ -2,25 +2,27 @@
     <div class="navbar-header">
         <div class="d-flex">
             <!-- LOGO -->
-            <div class="navbar-brand-box">
+            <div class="navbar-brand-box @(IsMinimize ? "minimized" : "")">
                 <div class="d-flex align-items-center">
-                    <div class="m-2">IMG</div>
+                    <div class="me-2 @(IsMinimize ? "hiddenImage mt-3" : "")">
+                        <img class="header-profile-user" src="assets/images/logo.png" alt="Header
+                    Avatar">
+                    </div>
                     <div>
-                        <div class="fw-bold" style="font-size: 28px;">Planner</div>
-                        <div class="" style="font-size: 8px;">for man power planning</div>
+                        <div class="fw-bold @(IsMinimize ? "hiddenTitle" : "")" style="font-size: 28px;">Planner</div>
+                        <div class="@(IsMinimize ? "hiddenTitle" : "")" style="font-size: 8px;">for man power planning
+                        </div>
                     </div>
                 </div>
             </div>
 
-            <button type="button" class="btn btn-sm px-3 font-size-16 header-item" id="vertical-menu-btn">
+            <button type="button" class="btn btn-sm px-3 font-size-16 header-item @(IsMinimize ? "ms-1" : "")"
+                id="vertical-menu-btn" @onclick="InvokeMinimizeSidebar">
                 <i class="bi bi-list font-weight-bold"></i>
             </button>
 
-
         </div>
-
         <div class="d-flex">
-
             <div class="dropdown d-inline-block d-lg-none ms-2">
                 <button type="button" class="btn header-item" id="page-header-search-dropdown" data-bs-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
@@ -46,8 +48,8 @@
                 <button type="button" class="btn header-item
                                 bg-soft-light border-start border-end" id="page-header-user-dropdown"
                     data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    @* <img class="rounded-circle header-profile-user" src="assets/images/ut-sm.png" alt="Header
-                    Avatar"> *@
+                    <img class="rounded-circle header-profile-user" src="assets/images/ut.jpg" alt="Header
+                    Avatar">
                     <span class="d-none d-xl-inline-block ms-1
                                     fw-medium">UT</span>
                     <i class="mdi mdi-chevron-down d-none
@@ -77,3 +79,29 @@
         </div>
     </div>
 </header>
+
+@code {
+    [Parameter]
+    public EventCallback MinimizeSidebar { get; set; }
+    [Parameter]
+    public bool IsMinimize { get; set; }
+    private async Task InvokeMinimizeSidebar() => await MinimizeSidebar.InvokeAsync();
+}
+
+<style scoped>
+    .navbar-brand-box {
+        transition: width 0.3s ease-in-out;
+    }
+
+    .minimized {
+        width: 70px;
+    }
+
+    .hiddenTitle {
+        display: none;
+    }
+
+    .hiddenImage {
+        font-size: 20px;
+    }
+</style>
