--- a/Client/Shared/Components/Sidebar.razor
+++ b/Client/Shared/Components/Sidebar.razor
@@ -1,6 +1,6 @@
 @inject NavigationManager NavigationManager
 
-<div class="vertical-menu">
+<div class="vertical-menu @(IsMinimize ? "minimized" : "")">
 
     <div class="h-100">
 
@@ -11,37 +11,54 @@
                 <li>
                     <NavLink href="/" Match="NavLinkMatch.All">
                         <i class="bi bi-grid-1x2-fill"></i>
-                        <span data-key="t-dashboard">Dashboard</span>
+                        <span data-key="t-dashboard"
+                            class="@(IsMinimize ? "hidden" : "visible") @(IsMinimize ? "" : "active")">Dashboard</span>
                     </NavLink>
                 </li>
                 <li>
                     <NavLink href="/pengajuan-mpp">
                         <i class="bi bi-plus-square"></i>
-                        <span data-key="t-dashboard">Pengajuan MPP</span>
+                        <span data-key="t-dashboard"
+                            class="@(IsMinimize ? "hidden" : "visible") @(IsMinimize ? "" : "active")">Pengajuan
+                            MPP</span>
                     </NavLink>
                 </li>
                 <li>
                     <NavLink href="/pemenuhan-mpp">
                         <i class="bi bi-geo-alt-fill"></i>
-                        <span data-key="t-dashboard">Pemenuhan MPP</span>
+                        <span data-key="t-dashboard"
+                            class="@(IsMinimize ? "hidden" : "visible") @(IsMinimize ? "" : "active")">Pemenuhan
+                            MPP</span>
                     </NavLink>
                 </li>
                 <li>
                     <NavLink href="/menu-report">
                         <i class="bi bi-bar-chart-fill"></i>
-                        <span data-key="t-dashboard">Menu Report</span>
+                        <span data-key="t-dashboard"
+                            class="@(IsMinimize ? "hidden" : "visible") @(IsMinimize ? "" : "active")">Menu
+                            Report</span>
                     </NavLink>
                 </li>
                 <li>
                     <NavLink href="/master-data">
                         <i class="bi bi-database-fill"></i>
-                        <span data-key="t-dashboard">Master Data</span>
+                        <span data-key="t-dashboard"
+                            class="@(IsMinimize ? "hidden" : "visible") @(IsMinimize ? "" : "active")">Master
+                            Data</span>
                     </NavLink>
                 </li>
                 <li>
                     <NavLink href="/akun">
                         <i class="bi bi-person-circle"></i>
-                        <span data-key="t-dashboard">Akun</span>
+                        <span data-key="t-dashboard"
+                            class="@(IsMinimize ? "hidden" : "visible") @(IsMinimize ? "" : "active")">Akun</span>
+                    </NavLink>
+                </li>
+                <li>
+                    <NavLink href="/components">
+                        <i class="bi bi-sliders"></i>
+                        <span data-key="t-dashboard"
+                            class="@(IsMinimize ? "hidden" : "visible") @(IsMinimize ? "" : "active")">Components</span>
                     </NavLink>
                 </li>
             </ul>
@@ -51,9 +68,40 @@
 </div>
 
 @code {
+    [Parameter]
+    public bool IsMinimize { get; set; }
 }
 
 <style scoped>
+    .vertical-menu {
+        transition: width 0.3s ease-in-out;
+        /* Adjust the duration and timing function as needed */
+    }
+
+    .minimized {
+        width: 70px;
+        /* The width when minimized */
+    }
+
+    .hidden {
+        opacity: 0;
+        display: none;
+        transition: opacity 0.3s ease-in-out;
+    }
+
+    .visible {
+        opacity: 0;
+        display: inline-block;
+        /* or any other display value you want when visible */
+        transition: opacity 0.3s ease-in-out;
+    }
+
+    .visible.active {
+        opacity: 1;
+        transition-delay: 1s;
+        /* Delay of 1 second */
+    }
+
     a span {
         color: #8F90A6;
     }
