--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -12,3 +12,4 @@
 @using lunchBlazor.Client.Shared.Widget
 @using lunchBlazor.Shared.Models
 @using lunchBlazor.Client.Services.BannerService
+@using CurrieTechnologies.Razor.SweetAlert2
