update blazor template 09/11/23

--- a/Client/Pages/Dashboard/Index.razor
+++ b/Client/Pages/Dashboard/Index.razor
@@ -5,13 +5,23 @@
 
 
 <div class="row">
-    <div class="col-12 card bg-dark rounded p-4">
-        <div class="title-user d-flex">Selamat Datang, <div class="username"> Nama User!</div>
-        </div>
-        <div class="subtitle-user">Selamat datang di aplikasi Planner, aplikasi perencanaan dan pengelolaan man power
-            PT. United Tractors .Tbk
+    <div class="col-12 card bg-dark" style="border-radius: 10px;">
+        <div class="row">
+            <div class="col-9 px-4">
+                <div class="title-user d-flex mt-5">Selamat Datang, <div class="username"> Nama User!</div>
+                </div>
+                <div class="subtitle-user mb-4">Selamat datang di aplikasi Planner, aplikasi perencanaan dan <br>
+                    pengelolaan
+                    man power PT. United Tractors .Tbk
+                </div>
+            </div>
+            <div class="col-3 h-100 d-flex justify-content-end align-items-end">
+                <img src="assets/images/user.png" alt="user" height="150px">
+            </div>
         </div>
     </div>
+
+
 
 
 </div>
