--- a/Client/Pages/FetchData.razor
+++ b/Client/Pages/FetchData.razor
@@ -61,7 +61,7 @@
 item.Id.ToString(),
 item.Name,
 new MarkupString($"<img src='{item.Image}' width='20px' height='20px' alt='Banner Image' />"),
-new MarkupString($"<div style='color:red;'>{item.IsActive.ToString()}</div>"),
+new MarkupString($"<div style='color:blue;'>{item.IsActive.ToString()}</div>"),
 };
 
             table.Data.Add(rowData);
