--- a/Client/Shared/Components/Sidebar.razor
+++ b/Client/Shared/Components/Sidebar.razor
@@ -17,7 +17,7 @@
                 </li>
                 <li>
                     <NavLink href="/pengajuan-mpp">
-                        <i class="bi bi-plus-square"></i>
+                        <i class="bi bi-layers-fill"></i>
                         <span data-key="t-dashboard"
                             class="@(IsMinimize ? "hidden" : "visible") @(IsMinimize ? "" : "active")">Pengajuan
                             MPP</span>
