--- a/Client/Pages/Components.razor
+++ b/Client/Pages/Components.razor
@@ -20,8 +20,11 @@
         <div class="card-header fw-bold">Buttons</div>
         <div class="card-body">
             <div class="row">
+                <div class="col-12">
+                    <Button Label="Download" bold btnBlock/>
+                </div>
                 <div class="col-3 mb-3">
-                    <Button btnClass="outline-primary" LabelColor="text-danger" bold />
+                    <Button btnClass="outline-success" rounded LabelColor="text-danger" bold />
                  </div>
                  <div class="col-3">
                      <Button btnClass="secondary" btnBlock />
@@ -49,6 +52,9 @@
          <div class="card-header fw-bold">Input</div>
          <div class="card-body">
              <div class="row">
+                <div class="col-12">
+                    <Input label="ini Label Input" placeholder="ini placeholder" bold errorText=""/>
+                </div>
                  <div class="col-6">
                      <Input placeholder="Input Without Label" />
                  </div>
