--- a/Client/Pages/FetchData.razor
+++ b/Client/Pages/FetchData.razor
@@ -18,7 +18,7 @@
     private int page = 1;
     private int pageSize = 5;
     private TableModelViewModel table = new TableModelViewModel();
-    private List<Banner> bannerItems = new List<Banner>();
+    @* private List<Banner> bannerItems = new List<Banner>(); *@
 
 
     private async Task Next()
