commit client side

--- a/Client/Pages/Components.razor
+++ b/Client/Pages/Components.razor
@@ -21,28 +21,31 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-12">
-                    <Button Label="Download" bold btnBlock/>
-                </div>
-                <div class="col-3 mb-3">
-                    <Button btnClass="outline-success" rounded LabelColor="text-danger" bold />
+                    <Button Label="INI Button haha" btnClass="btn-info" IsBtnIcon />
+                 </div>
+                 <div class="col-12">
+                     <Button Label="Download" bold btnBlock />
+                 </div>
+                 <div class="col-3 mb-3">
+                     <Button btnClass="btn-outline-success" rounded LabelColor="text-danger" bold />
                  </div>
                  <div class="col-3">
-                     <Button btnClass="secondary" btnBlock />
+                     <Button btnClass="btn-secondary" btnBlock />
                  </div>
                  <div class="col-3">
-                     <Button btnClass="warning" btnBlock Label="This Label" rounded />
+                     <Button btnClass="btn-warning" btnBlock Label="This Label" rounded />
                  </div>
                  <div class="col-3">
-                     <Button btnClass="info" btnBlock Label="This Label" LabelColor="text-dark" />
+                     <Button btnClass="btn-info" btnBlock Label="This Label" LabelColor="text-dark" />
                  </div>
                  <div class="col-6">
-                     <Button btnBlock btnClass="danger" bold IsBtnIcon BtnIcon="bi bi-check-all" IsBtnIconLabel />
+                     <Button btnBlock btnClass="btn-danger" bold IsBtnIcon BtnIcon="bi bi-check-all" IsBtnIconLabel />
                  </div>
                  <div class="col-3">
                      <Button btnBlock Label="Download" bold IsBtnIcon />
                  </div>
                  <div class="col-3">
-                     <Button btnClass="outline-success" btnBlock Label="Oke" bold IsBtnIcon />
+                     <Button btnClass="btn-outline-success" btnBlock Label="Oke" bold IsBtnIcon />
                  </div>
              </div>
          </div>
@@ -52,9 +55,9 @@
          <div class="card-header fw-bold">Input</div>
          <div class="card-body">
              <div class="row">
-                <div class="col-12">
-                    <Input label="ini Label Input" placeholder="ini placeholder" bold errorText=""/>
-                </div>
+                 <div class="col-12">
+                     <Input label="ini Label Input" placeholder="ini placeholder" bold errorText="" />
+                 </div>
                  <div class="col-6">
                      <Input placeholder="Input Without Label" />
                  </div>
