--- a/Client/Pages/Dashboard/Index.razor
+++ b/Client/Pages/Dashboard/Index.razor
@@ -5,7 +5,7 @@
 
 
 <div class="row">
-    <div class="col-12 card bg-dark" style="border-radius: 10px;">
+    <div class="col-12 card bg-secondary" style="border-radius: 10px;">
         <div class="row">
             <div class="col-9 px-4">
                 <div class="title-user d-flex mt-5">Selamat Datang, <div class="username"> Nama User!</div>
@@ -27,5 +27,5 @@
 </div>
 
 @code {
-
+    public string abc { get; set; } = "aden";
 }
