--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -13,3 +13,5 @@
 @using lunchBlazor.Shared.Models
 @using lunchBlazor.Client.Services.BannerService
 @using CurrieTechnologies.Razor.SweetAlert2
+@using Sieve.Models
+@using lunchBlazor.Client.Pages.Pengajuan_MPP.Components
