--- a/Client/Pages/FetchData.razor
+++ b/Client/Pages/FetchData.razor
@@ -2,6 +2,7 @@
 @using lunchBlazor.Shared
 @inject HttpClient Http
 @inject BannerService BannerService
+@inject SieveModel SieveModel
 
 <PageTitle>Weather forecast</PageTitle>
 
@@ -10,45 +11,48 @@
 <p>This component demonstrates fetching data from the server.</p>
 
 <Table table=@table label="Label" HandleClickPrevious="Previous" HandleClickNext="Next"
-    HandlePageSizeChange="HandlePageSizeChange" page="BannerService.Banners.page"
-    pageSize="BannerService.Banners.pageSize" totalCountData="BannerService.Banners.totalCountData" />
+    HandlePageSizeChange="HandlePageSizeChange" mySieveModel="mySieveModel"
+    totalCountData="BannerService.Banners.totalCountData" />
 
 
 @code {
-    private int page = 1;
-    private int pageSize = 5;
+    private SieveModel mySieveModel = new SieveModel
+        {
+            Page = 1,
+            PageSize = 5,
+        };
     private TableModelViewModel table = new TableModelViewModel();
     private List<Banner> bannerItems = new List<Banner>();
 
 
     private async Task Next()
     {
-        page++; // Increment the page
-        await LoadBanner(page, pageSize); // Call LoadBanner with the updated page
+        mySieveModel.Page++; // Increment the page
+        await LoadBanner(mySieveModel); // Call LoadBanner with the updated page
     }
     private async Task Previous()
     {
-        page--; // Increment the page
-        await LoadBanner(page, pageSize); // Call LoadBanner with the updated page
+        mySieveModel.Page--; // Increment the page
+        await LoadBanner(mySieveModel); // Call LoadBanner with the updated page
     }
 
     private async Task HandlePageSizeChange(ChangeEventArgs e)
     {
         if (int.TryParse(e.Value.ToString(), out int selectedPageSize))
         {
-            pageSize = selectedPageSize;
-            await LoadBanner(page, pageSize); // Reload data when pageSize changes
+            mySieveModel.PageSize = selectedPageSize;
+            await LoadBanner(mySieveModel); // Reload data when pageSize changes
         } // Call LoadBanner with the updated page
     }
 
     protected override async Task OnInitializedAsync()
     {
-        await LoadBanner(page, pageSize);
+        await LoadBanner(mySieveModel);
     }
 
-    private async Task LoadBanner(int page, int pageSize)
+    private async Task LoadBanner(SieveModel sieveModel)
     {
-        await BannerService.LoadBanner(page, pageSize);
+        await BannerService.LoadBanner(sieveModel);
 
         bannerItems = BannerService.Banners.Items;
 
