--- a/Client/Shared/Widget/Table.razor
+++ b/Client/Shared/Widget/Table.razor
@@ -44,8 +44,9 @@ else
                                             href="@($"{url}/{table.Data[rowIndex][0]}")">Edit <i class="bi bi-pencil"></i></a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item d-flex justify-content-between" href="#">Delete <i
-                                                class="bi bi-trash"></i></a>
+                                        <a class="dropdown-item d-flex justify-content-between" href="#">
+                                            Delete <i class="bi bi-trash"></i>
+                                        </a>
                                     </li>
                                 </ul>
                             </div>
@@ -67,7 +68,7 @@ else
                                     <i class="bi bi-chevron-left text-white"></i>
                                 </button>
                                 <div class="page-info">
-                                    @(page) of @(totalPages)
+                                    @(mySieveModel.Page) of @(totalPages)
                                 </div>
                                 <button @onclick="HandleClickNext" class="btn btn-primary" disabled="@IsNextButtonDisabled"
                                     id="btnNext">
@@ -76,7 +77,7 @@ else
                             </div>
                             <div class="d-flex align-items-center">
                                 show
-                                <select name="pageSize" class="form-select mx-1" @bind="pageSize"
+                                <select name="pageSize" class="form-select mx-1" @bind="mySieveModel.PageSize"
                                     @oninput="HandlePageSizeChange">
                                     <option value="5">5</option>
                                     <option value="10">10</option>
@@ -121,14 +122,13 @@ oke
     [Parameter]
     public Func<ChangeEventArgs, Task> HandlePageSizeChange { get; set; }
     [Parameter]
-    public int? page { get; set; }
-    [Parameter]
-    public int? pageSize { get; set; }
+    public SieveModel? mySieveModel { get; set; }
+
     [Parameter]
     public int? totalCountData { get; set; }
-    public int? totalPages => (totalCountData + pageSize - 1) / pageSize;
-    private bool IsPreviousButtonDisabled => page == 1;
-    private bool IsNextButtonDisabled => (page * pageSize) >= totalCountData;
+    public int? totalPages => (totalCountData + mySieveModel.PageSize - 1) / mySieveModel.PageSize;
+    private bool IsPreviousButtonDisabled => mySieveModel.Page == 1;
+    private bool IsNextButtonDisabled => (mySieveModel.Page * mySieveModel.PageSize) >= totalCountData;
 
 }
 
