--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -11,7 +11,7 @@
 @using lunchBlazor.Client.Shared.Components
 @using lunchBlazor.Client.Shared.Widget
 @using lunchBlazor.Shared.Models
-@using lunchBlazor.Client.Services.BannerService
+@using lunchBlazor.Client.Services.DepartemenService
 @using CurrieTechnologies.Razor.SweetAlert2
 @using Sieve.Models
 @using lunchBlazor.Client.Pages.Pengajuan_MPP.Components
